--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
     "react/no-unescaped-entities": 0,
     "react/function-component-definition": 0,
     "react/require-default-props": 0,
+    "arrow-body-style": 0,
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
   }
 }
